# tiny_manna

./: .gitignore  Makefile  gfx.h  gl2d.h  meson.build  params.h  tiny_manna.cpp
